[gd_scene load_steps=29 format=3 uid="uid://dpgefuru2e87f"]

[ext_resource type="Script" uid="uid://d22r075trxogn" path="res://Scripts/final_boss.gd" id="1_dprs8"]
[ext_resource type="Texture2D" uid="uid://csyimvgcyglht" path="res://Assets/Sprites/2 Rhinoceros-beetle/Rhinoceros-beetle_attack2.png" id="2_dprs8"]
[ext_resource type="Texture2D" uid="uid://bweb7ojfanwpx" path="res://Assets/Sprites/2 Rhinoceros-beetle/Rhinoceros-beetle_walk.png" id="3_k77fu"]
[ext_resource type="Texture2D" uid="uid://ddl3b6pa23h7j" path="res://Assets/Sprites/2 Rhinoceros-beetle/Rhinoceros-beetle_hurt.png" id="4_8i2ud"]
[ext_resource type="Texture2D" uid="uid://cykl38a05vbqa" path="res://Assets/Sprites/2 Rhinoceros-beetle/Rhinoceros-beetle_Idle.png" id="5_5uamw"]
[ext_resource type="Texture2D" uid="uid://c4mq78tgw0tgu" path="res://Assets/Sprites/2 Rhinoceros-beetle/Rhinoceros-beetle_death.png" id="6_mxp2g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_670oq"]
atlas = ExtResource("2_dprs8")
region = Rect2(0, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_k77fu"]
atlas = ExtResource("2_dprs8")
region = Rect2(72, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i2ud"]
atlas = ExtResource("2_dprs8")
region = Rect2(144, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uamw"]
atlas = ExtResource("2_dprs8")
region = Rect2(216, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3ron"]
atlas = ExtResource("3_k77fu")
region = Rect2(0, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdlae"]
atlas = ExtResource("3_k77fu")
region = Rect2(72, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu1ue"]
atlas = ExtResource("3_k77fu")
region = Rect2(144, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8was"]
atlas = ExtResource("3_k77fu")
region = Rect2(216, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4s0j"]
atlas = ExtResource("4_8i2ud")
region = Rect2(0, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqk3l"]
atlas = ExtResource("4_8i2ud")
region = Rect2(72, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuwwk"]
atlas = ExtResource("5_5uamw")
region = Rect2(0, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pttn"]
atlas = ExtResource("5_5uamw")
region = Rect2(72, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmrgf"]
atlas = ExtResource("5_5uamw")
region = Rect2(144, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkyfw"]
atlas = ExtResource("5_5uamw")
region = Rect2(216, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_gljxc"]
atlas = ExtResource("6_mxp2g")
region = Rect2(0, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wlhr"]
atlas = ExtResource("6_mxp2g")
region = Rect2(72, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_gigt1"]
atlas = ExtResource("6_mxp2g")
region = Rect2(144, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wj3s"]
atlas = ExtResource("6_mxp2g")
region = Rect2(216, 0, 72, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_nugnu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_670oq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k77fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i2ud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uamw")
}],
"loop": false,
"name": &"angreifen",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3ron")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdlae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu1ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8was")
}],
"loop": true,
"name": &"laufen",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4s0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqk3l")
}],
"loop": false,
"name": &"schaden",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuwwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pttn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmrgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkyfw")
}],
"loop": true,
"name": &"stehen",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gljxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wlhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gigt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wj3s")
}],
"loop": false,
"name": &"sterben",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dulvg"]
size = Vector2(27, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ux22v"]
size = Vector2(133, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dprs8"]
size = Vector2(32, 30)

[node name="FinalBoss" type="CharacterBody2D"]
script = ExtResource("1_dprs8")

[node name="BossSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_nugnu")
animation = &"angreifen"
frame = 3
frame_progress = 1.0

[node name="BossKollision" type="CollisionShape2D" parent="."]
position = Vector2(8, 21)
shape = SubResource("RectangleShape2D_dulvg")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(6.5, 21)
shape = SubResource("RectangleShape2D_ux22v")

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(8, 21)
shape = SubResource("RectangleShape2D_dprs8")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="EdgeCheck" type="RayCast2D" parent="."]
position = Vector2(-60, 33)
target_position = Vector2(0, 16)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="DamageArea" to="." method="_on_damage_area_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
